--- a/pages/services/mobile-app-development/mobile-css/android.module.css
+++ b/pages/services/mobile-app-development/mobile-css/android.module.css
@@ -5,7 +5,7 @@
     padding: 3rem 0;
     height: 100%;
     width: 100%;
-    background: transparent linear-gradient(143deg, #16A085 0%, #2474DD 100%) 0% 0% no-repeat padding-box;
+    background: transparent linear-gradient(143deg, #FF512F 0%, #DD2476 100%) 0% 0% no-repeat padding-box;
 }
 
 
