--- a/styles/css/services/android-game-development.css
+++ b/styles/css/services/android-game-development.css
@@ -208,12 +208,37 @@ picture img {
 
 /* ======================================================================================= */
 
-.moreBtn {
-  padding: 15px 5px;
+
+.morebtn {
+  padding: 15px 10px;
   display: inline-block;
   text-align: center;
-  width: 267px !important;
+  width: 220px;
+  margin-top: 10px;
+  text-decoration: none!important;
+  font-size: 15px;
+  text-transform: uppercase;
+  font-weight: 600;
+  background-color: #fff;
+  color: #ae0000;
+  border: 1px solid #ae0000;
+  transition: all ease-in-out .3s;
+  -webkit-transition: all ease-in-out .3s;
+  -moz-transition: all ease-in-out .3s;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
+
+.morebtn:hover {
+  color: #fff!important;
+  border-color: #ae0000;
+  background-color: #ae0000;
+}
+
+
 
 .card {
   border: 0;
