--- a/styles/css/quote.module.css
+++ b/styles/css/quote.module.css
@@ -1,14 +1,71 @@
 .bg{
-    background: #00C9FF;  
-background: -webkit-linear-gradient(to right, #92FE9D, #00C9FF); 
-background: linear-gradient(to right, #92FE9D, #00C9FF);
+
+background-color: #000000;
+
 
 }
 
 .qbutton{
-    background-color: #424595;
-    border-radius: 10px;
-    color: #fff;
+    /*background-color: #424595;
+    */border-radius: 10px;
     width: 100%;
     height: 60px;
+    border: none;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
+}
+
+.qbutton:hover{
+    background-color: #00C9FF;
+}
+
+.button{
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    padding: 7px 35px;
+}
+
+.button:active{
+     background-color: #ae0000;
+     color: white;
+}
+
+.button:hover{
+    background-color: #000000;
+    color: white;
+}
+
+
+.inputDesign{
+    border-radius: 20px!important;
+    -webkit-border-radius: 20px!important;
+    -moz-border-radius: 20px!important;
+    -ms-border-radius: 20px!important;
+    -o-border-radius: 20px!important;
+    padding: 8px 10px 10px 10px;
+}
+
+.particle canvas{
+    z-index: -10!important;
+    position: inherit;
+}
+
+.processbarline{
+    width: 100%;
+    padding: 0 20px;
+}
+
+.formbg{
+    background: rgba(255, 255, 255, 0.45);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
 }
