--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 
 a {
@@ -213,3 +213,105 @@ button:focus {
   border-color: 1px solid red !important;
   color: rgb(0, 0, 0) !important;
 }
+
+
+
+#tsparticles {
+  position: initial!important;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  padding: 0;
+  margin: 0;
+  z-index: -9!important; /* if you use -1 you have to set to `"window"` the interactivity.detectsOn property */
+}
+
+/* ================================================= */
+
+
+@media (max-width: 576px) { 
+  .home_text > h3 {
+    font-family: "Poppins", sans-serif;
+    font-size: 2.8rem!important;
+    font-style: italic;
+    line-height: 1;
+  }
+  
+  .home_text > p:nth-child(2) {
+    font-family: "Poppins", sans-serif;
+    font-weight: lighter;
+    margin-top: 1.1rem;
+    font-weight: 600;
+  }
+  
+  .home_text > p:nth-child(3) {
+    font-family: "Poppins", sans-serif;
+    font-weight: lighter;
+    margin-top: 1.1rem;
+    font-weight: 600;
+  
+  }
+  
+  
+  .mobileImage{
+    object-fit: fill!important;
+  }
+  
+  .flex-reverse{
+    flex-direction: column-reverse;
+  }
+  
+  .heroSec{
+    text-align: center;
+  }
+  
+ .mobileImage{
+    display: block!important;
+  }
+
+.hero-image{
+    display: none!important;
+  }
+
+  }  
+
+
+  
+  @media (min-width: 767.98px) { 
+  
+  .mobileImage{
+    display: none!important;
+  }
+  
+  .hero-image{
+    display: block!important;
+  }
+  
+  }
+  
+  
+  @media (min-width: 991.98px) { 
+  
+  .mobileImage{
+    display: none!important;
+  }
+  
+  .hero-image{
+    display: block!important;
+  }
+  }
+  
+  
+  @media (min-width: 1199.98px) { 
+  .mobileImage{
+    display: none!important;
+  }
+  
+  .hero-image{
+    display: block!important;
+  }
+  
+  }
+
+
