--- a/styles/css/Testimonial.module.css
+++ b/styles/css/Testimonial.module.css
@@ -1,18 +1,18 @@
 .mainSlider {
   text-align: center;
   overflow: hidden;
-  }
-
-.uppertestiImage{
-  text-align: center;
-  text-align: -webkit-center!important;
-
+  height: 17rem;
 }
 
-.rounded{
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
+.uppertestiImage {
+  text-align: center;
+  text-align: -webkit-center !important;
+}
+
+.rounded {
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
 }
